2003-09-26  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (process_component):
	* gui/e-week-view.c (process_component): added missing case, so that
	we also display recurrent meetings starting before the time range and
	ending after the time range.

	* cal-client/cal-listener.c (impl_notifyReadOnly): pass the
	'read_only' argument to the signal callback correctly (a gboolean
	not a 'gboolean *').

	* gui/comp-editor-factory.c (resolve_pending_requests): removed
	the g_assert on 'oc->pending != NULL', since there are now cases
	(local calendar) where we get to call this function (cal_opened_cb)
	with no pending requests yet.

2003-09-25  JP Rosevear <jpr@ximian.com>

	* gui/calendar-commands.c (publish_freebusy_cmd): adapt to new
	get_free_busy api

	* conduits/calendar/calendar-conduit.c (post_sync): ditto
	(pre_sync): ditto

	* conduits/todo/todo-conduit.c (pre_sync): ditto
	(post_sync): ditto

	* gui/e-meeting-model.c (refresh_busy_periods): ditto

	* gui/e-itip-control.c (send_freebusy): ditto

	* gui/e-cal-view.c (on_publish): ditto

	* cal-client/cal-listener.h: add signals

	* cal-client/cal-listener.c (build_change_list): move here from
	cal-client.c
	(impl_notifyChanges): implement
	(build_free_busy_list): util to create the GList of free busy
	objects
	(impl_notifyFreeBusy): implement
	(cal_listener_class_init): set free busy and changes epv methods,
	add signals

	* cal-client/cal-client.h: update protos

	* cal-client/cal-client.c (cal_get_changes_cb): get changes call
	back
	(cal_get_free_busy_cb): get free busy call back
	(cal_client_init): listen for free busy and changes signals
	(cal_client_get_changes): convert to new threaded sync api
	(cal_client_get_free_busy): ditto

	* pcs/cal.h: add protos

	* pcs/cal.c: remove dead type conversion function
	(impl_Cal_getChanges): implement by just calling, no return stuff
	(impl_Cal_getFreeBusy): ditto
	(cal_notify_changes): do getChanges callback
	(cal_notify_free_busy): do getFreeBusy callback
